crates/reinhardt-core/macros/tests/ui/shared_model/fail/enum_rejected.stderr
error: #[shared_model] can only be applied to structs
 --> tests/ui/shared_model/fail/enum_rejected.rs:6:10
  |
6 | pub enum Status {
  |          ^^^^^^
